objects/Standard_Goal__c.object
<CustomObject>
    <description>This object holds the primary metadata relating the Enterprise Goals to their respective details and intended Payees.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Goal Templates (Business Owner)</relationshipLabel>
        <relationshipName>Master_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>SG{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Comments__c</fullName>
        <label>GT Comments</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal Template Type</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Goal Type you have selected is inactive.</errorMessage>
            <filterItems>
                <field>Goal_Type__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Goal_Type__c.Standard_Goal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Goal_Type__c</referenceTo>
        <relationshipLabel>Goal Templates</relationshipLabel>
        <relationshipName>Standard_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Goal Templates (Payee)</relationshipLabel>
        <relationshipName>Standard_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start__c</fullName>
        <label>Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standard_Type__c</fullName>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <description>Added in CR-20160307-9680.</description>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <formula>IF( 
AND(NOT(ISNULL(Amount__c)),Amount__c &gt; 0), 

&quot;$&quot; &amp; 
IF(Amount__c &gt;= 1000000, 
TEXT(FLOOR(Amount__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF(Amount__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Amount__c / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount__c)), 3), 

IF( 
AND(NOT(ISNULL(Counter__c)),Counter__c &gt; 0), 
TEXT(Counter__c), 
IF( 
AND(NOT(ISNULL(Percent__c)),Percent__c &gt; 0), 
TEXT(Percent__c * 100) + &quot;%&quot;, 
&apos;&apos; 
) 
) 
)</formula>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <label>Goal Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllActive</fullName>
        <columns>NAME</columns>
        <columns>Standard_Type__c</columns>
        <columns>Payee__c</columns>
        <columns>Value__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>Current_Goal_Template</fullName>
        <columns>NAME</columns>
        <columns>Standard_Type__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Period_Start__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Period_End__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Current Goal Templates</label>
    </listViews>
    <listViews>
        <fullName>NBBGroup</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>Payee__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Type__c</field>
            <operation>equals</operation>
            <value>Group</value>
        </filters>
        <filters>
            <field>Goal_Type__c</field>
            <operation>contains</operation>
            <value>NBB</value>
        </filters>
        <label>NBB Group</label>
    </listViews>
    <listViews>
        <fullName>NBBPersonal</fullName>
        <columns>NAME</columns>
        <columns>Payee__c</columns>
        <columns>Value__c</columns>
        <columns>Active__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Standard_Type__c</field>
            <operation>equals</operation>
            <value>Personal</value>
        </filters>
        <filters>
            <field>Goal_Type__c</field>
            <operation>contains</operation>
            <value>NBB</value>
        </filters>
        <label>NBB Personal</label>
    </listViews>
    <listViews>
        <fullName>Renewal</fullName>
        <columns>NAME</columns>
        <columns>Standard_Type__c</columns>
        <columns>Value__c</columns>
        <columns>Period_Start__c</columns>
        <columns>Period_End__c</columns>
        <columns>Payee__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Goal_Type__c</field>
            <operation>contains</operation>
            <value>Renewal,AM,Account Management</value>
        </filters>
        <label>Renewal</label>
    </listViews>
    <nameField>
        <label>Goal Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Templates</pluralLabel>
    <recordTypes>
        <fullName>NBB</fullName>
        <active>true</active>
        <label>NBB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewals</fullName>
        <active>true</active>
        <label>Renewals</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Period_Start__c &gt; Period_End__c</errorConditionFormula>
        <errorDisplayField>Period_Start__c</errorDisplayField>
        <errorMessage>The Start date cannot be later than the End date.</errorMessage>
    </validationRules>
</CustomObject>